# grimstroke

./: .gitignore  pyproject.toml
grimstroke/: color_palette.py  color_pallete.py  flow_field.py  flower.py  main.py  painting.py  painting_runner.py  polar.py
tests/: test_grimstroke.py
