[tool.poetry]
name = "grimstroke"
version = "0.1.0"
description = ""
authors = ["Pachu Chembukave <pachu.chembukave@id.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.4.0"
pygame = "^2.1.0"
screeninfo = "^0.8"
perlin-noise = "^1.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
